--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl:
-
-
+  fluttertoast: ^8.2.1
+  intl: ^0.18.1
+  http: ^0.13.5
+  flutter_spinkit: ^5.1.0
+  provider: ^6.0.5
+  animated_text_kit: ^4.2.2
   cupertino_icons: ^1.0.2
+  dio: ^5.1.1
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
